[tool.poetry]
name = "traffic-jam"
version = "0.1.0"
description = "Take control of your Maschine JAM."
authors = ["CobaltCore <cobaltcore@yandex.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3.1"
termcolor = "^1.1.0"
mido = "^1.2.9"
durations_nlp = "^0.4.0"
python-rtmidi = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
